src/objects/loan__Loan_Product_Differentiator__c.object
<CustomObject>
    <fields>
        <fullName>loan__Line_of_Credit_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the loan operation allowed for Line of Credit type.</description>
        <label>Line of Credit Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Operation__c</fullName>
        <description>Loan Operation which is not allowed on some loan product types</description>
        <label>Loan Operation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Loan_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the loan operation allowed on loan type.</description>
        <label>Loan Type</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Product Differentiator</label>
    <nameField>
        <label>Loan Product Differentiator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Product Differentiator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>